tests/ui/associated-types/dont-suggest-cyclic-constraint.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-cyclic-constraint.rs:9:35
   |
LL |     debug_assert_eq!(iter.next(), Some(value));
   |                                   ^^^^^^^^^^^ expected `Option<<I as Iterator>::Item>`, found `Option<&<I as Iterator>::Item>`
   |
   = note: expected enum `Option<<I as Iterator>::Item>`
              found enum `Option<&<I as Iterator>::Item>`
help: use `Option::as_ref()` to convert `Option<<I as Iterator>::Item>` to `Option<&<I as Iterator>::Item>`
   |
LL |     debug_assert_eq!(iter.next().as_ref(), Some(value));
   |                                 +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
